--- a/cd/Dockerfile.py2
+++ b/cd/Dockerfile.py2
@@ -16,16 +16,18 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-# Python2 MXNet Dockerfile
+# Python3 MXNet Dockerfile
 ARG PLATFORM
 FROM ${PLATFORM}
 
-RUN apt-get update
-RUN apt-get install -y wget python gcc
-RUN wget https://bootstrap.pypa.io/get-pip.py
-RUN python get-pip.py
+RUN apt-get update && \
+    apt-get install -y wget python-dev gcc && \
+    wget https://bootstrap.pypa.io/get-pip.py && \
+    python get-pip.py
 
+RUN mkdir -p /mxnet
 COPY *.whl /mxnet/.
-RUN pip install /mxnet/*.whl && rm -f /mxnet/*.whl
 
 WORKDIR /mxnet
+RUN WHEEL_FILE=$(ls -t /mxnet | head -n 1) && echo ${WHEEL_FILE} && pip install ${WHEEL_FILE}
+
