--- a/ci/docker/Dockerfile.build.ubuntu_gpu_cu80
+++ b/ci/docker/Dockerfile.build.ubuntu_gpu_cu80
@@ -18,12 +18,13 @@
 #
 # Dockerfile to run MXNet on Ubuntu 16.04 for GPU
 
-FROM nvidia/cuda:8.0-cudnn5-devel
+FROM nvidia/cuda:8.0-cudnn7-devel
 
 WORKDIR /work/deps
 
 COPY install/ubuntu_python.sh /work/
 RUN /work/ubuntu_python.sh
+RUN apt install -y pandoc
 
 ARG USER_ID=0
 ARG GROUP_ID=0
